--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,6 +217,8 @@ jobs:
         run: yarn install --prefer-offline --frozen-lockfile --production
       - name: Set test env
         run: cp backend/app/api/.env.ci.json backend/app/api/.env.json
+      - name: Running migrations
+        run: cd backend/app/api && node ./dist/migrations.js
       - name: Run boot test
         run: test/boot/boot-test.sh
       - name: Notify Slack of failure
