--- a/backend/app/api/.env.ci.json
+++ b/backend/app/api/.env.ci.json
@@ -1,17 +1,28 @@
 {
     "environment": "test",
     "domains": {
-        "dashboard": "dashboard.stamhoofd.dev",
-        "registration": {
-            "": "stamhoofd.dev",
-            "BE": "dev.stamhoofd.be",
-            "NL": "dev.stamhoofd.nl"
+        "dashboard": "dashboard.stamhoofd",
+        "marketing": {
+            "": "www.be.stamhoofd",
+            "BE": "www.be.stamhoofd",
+            "NL": "www.nl.stamhoofd"
         },
-        "webshop": "shop.stamhoofd.dev",
-        "api": "api.stamhoofd.dev",
+        "webshop": {
+            "": "shop.be.stamhoofd",
+            "BE": "shop.be.stamhoofd",
+            "NL": "shop.nl.stamhoofd"
+        },
+        "api": "api.stamhoofd",
+        "rendererApi": "renderer.stamhoofd",
+            
+        "defaultTransactionalEmail": {
+            "": "stamhoofd.be"
+        },
+
         "defaultBroadcastEmail": {
             "": "stamhoofd.email"
-        }
+        },
+        "webshopCname": "shop.stamhoofd"
     },
     
     "PORT": 9091,
