Added google translator test

--- a/.development/i18n-auto-translate/.env.template
+++ b/.development/i18n-auto-translate/.env.template
@@ -1,1 +1,8 @@
 I18NUUID_DEFAULT_LOCALE=nl
+I18NUUID_ROOT=/Users/username/Projects/stamhoofd
+I18NUUID_LOCALES_DIR=/Users/username/Projects/stamhoofd/shared/locales/src
+I18NUUID_LOCALES_DIR_DIST=/Users/username/Projects/stamhoofd/shared/locales/dist
+I18NUUID_DEFAULT_LOCALE=nl
+I18NUUID_OTHER_MAIN_LOCALES_ARRAY=en
+I18NUUID_EXCLUDE_DIRS_ARRAY=dist,esm,node_modules
+GEMINI_API_KEY=KEY
