--- a/.development/i18n-auto-translate/package.json
+++ b/.development/i18n-auto-translate/package.json
@@ -9,9 +9,10 @@
         "start": "yarn build && node ./dist/index.js"
     },
     "dependencies": {
-        "uuid": "11.0.3",
+        "@google/generative-ai": "^0.22.0",
+        "chalk": "4",
         "dotenv": "^16.4.5",
-        "chalk": "4"
+        "uuid": "11.0.3"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^7.7.1",
