Updated member user syncing to always allow parent access
fixes STA-501

--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -16,6 +16,7 @@
         "clear": "rm -rf ./dist",
         "start": "yarn build && node --enable-source-maps ./dist/index.js",
         "test": "jest --runInBand",
+        "test:build": "yarn -s build:full && yarn -s test",
         "test:reset": "yarn build:full && jest --runInBand",
         "migrations": "yarn build:full && node ./dist/migrations.js",
         "lint": "eslint"
