--- a/.development/i18n-auto-translate/package.json
+++ b/.development/i18n-auto-translate/package.json
@@ -12,7 +12,8 @@
         "@google/generative-ai": "^0.22.0",
         "chalk": "4",
         "dotenv": "^16.4.5",
-        "uuid": "11.0.3"
+        "uuid": "11.0.3",
+        "winston": "^3.17.0"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^7.7.1",
