--- a/.development/i18n-auto-translate/package.json
+++ b/.development/i18n-auto-translate/package.json
@@ -13,6 +13,7 @@
         "@google/generative-ai": "^0.22.0",
         "chalk": "4",
         "dotenv": "^16.4.5",
+        "openai": "^4.86.2",
         "uuid": "11.0.3",
         "winston": "^3.17.0"
     },
