--- a/.development/i18n-auto-translate/package.json
+++ b/.development/i18n-auto-translate/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@anthropic-ai/sdk": "^0.39.0",
         "@google/generative-ai": "^0.22.0",
+        "@mistralai/mistralai": "^1.5.0",
         "chalk": "4",
         "dotenv": "^16.4.5",
         "openai": "^4.86.2",
