--- a/.development/i18n-auto-translate/tsconfig.json
+++ b/.development/i18n-auto-translate/tsconfig.json
@@ -15,6 +15,8 @@
         "outDir": "dist",
         "lib": [
             "es2022",
+            "es2017",
+            "dom"
         ],
         "types": [
             "node"
