--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
         "test": "lerna run test",
         "lint": "lerna run lint",
+        "vitest": "ENV_FILE=frontend/.env.json vitest",
         "app:release": "cd devops && yarn -s build-code -s app && cd ../frontend/app/mobile && yarn ios && yarn android",
         "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
         "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
@@ -76,12 +77,14 @@
         "@babel/preset-env": "^7.16.5",
         "@eslint/js": "^9.11.1",
         "@stylistic/eslint-plugin": "^2.8.0",
+        "@testing-library/dom": "^10.4.0",
         "@types/eslint__js": "^8.42.3",
         "@types/file-saver": "^2.0.5",
         "@types/jest": "^27.0.3",
         "@types/pdfkit": "0.13.4",
         "@types/qrcode": "1.5.3",
         "@vitejs/plugin-vue": "5.1.0",
+        "@vitest/browser": "^3.0.8",
         "autoprefixer": "^10.4.0",
         "concurrently": "8.2.2",
         "favicons": "^7.2.0",
@@ -92,6 +95,7 @@
         "lerna": "^8.1.2",
         "maildev": "^2.1.0",
         "nodemon": "^3.1.0",
+        "playwright": "^1.51.0",
         "postcss": "8.4.38",
         "sass": "^1.45.1",
         "ts-jest": "^29.1.2",
@@ -99,6 +103,8 @@
         "typescript": "^5.6.2",
         "vite": "5.3.5",
         "vite-svg-2-webfont": "3.4.0",
+        "vitest": "^3.0.8",
+        "vitest-browser-vue": "^0.2.0",
         "vue-tsc": "^2.0.14",
         "wait-on": "^7.2.0"
     },
