--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.15.4",
-        "@simonbackx/simple-encoding": "2.21.0",
+        "@simonbackx/simple-encoding": "2.22.0",
         "@simonbackx/simple-errors": "^1.4.0",
         "@simonbackx/simple-networking": "1.18.1",
         "@simonbackx/vue-app-navigation": "2.8.2",
@@ -81,7 +81,7 @@
         "@testing-library/dom": "^10.4.0",
         "@types/eslint__js": "^8.42.3",
         "@types/file-saver": "^2.0.5",
-        "@types/jest": "^27.0.3",
+        "@types/jest": "^29.0.0",
         "@types/pdfkit": "0.13.4",
         "@types/qrcode": "1.5.3",
         "@vitejs/plugin-vue": "5.1.0",
@@ -92,7 +92,7 @@
         "jest": "29.7.0",
         "jest-cli": "^29.7.0",
         "jest-console-group-reporter": "^1.1.1",
-        "jest-extended": "^1.2.0",
+        "jest-extended": "4.0.2",
         "lerna": "^8.1.2",
         "maildev": "^2.1.0",
         "nodemon": "^3.1.0",
