--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "license": "AGPL-3.0-only",
     "scripts": {
-        "dev": "yarn clear && yarn clear-vite-cache && concurrently -r 'yarn -s build:shared:watch' 'wait-on shared/structures/dist/index.js && wait-on shared/structures/dist/index.d.ts && lerna run dev --stream --parallel'",
+        "dev": "yarn clear && yarn clear-vite-cache && concurrently -r 'yarn -s build:shared:watch' 'wait-on shared/object-differ/dist/index.js && wait-on shared/object-differ/dist/index.d.ts && lerna run dev --stream --parallel'",
         "dev:server": "concurrently -r 'yarn -s dev' 'yarn -s caddy' 'yarn -s dns' 'yarn -s mail' 'yarn -s stripe-webhooks'",
         "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
         "test": "lerna run test",
@@ -29,7 +29,7 @@
         "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
         "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
         "clear:global:shared": "rm -rf shared/*/dist shared/*/esm/dist",
-        "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/test-utils && yarn -s build && cd ../locales && yarn -s build && cd ../utility && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
+        "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/test-utils && yarn -s build && cd ../locales && yarn -s build && cd ../utility && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../object-differ && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
         "clear:backend:shared": "rm -rf backend/shared/*/dist",
         "build:backend:shared": "echo 'Building shared backend dependencies...' && cd backend/shared/queues && yarn -s build && cd ../env && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../crons && yarn -s build && cd ../middleware && yarn -s build  && cd ../.. && echo 'Done building backend shared dependencies.'",
         "stripe-webhooks": "stripe listen --forward-to http://api.stamhoofd/stripe/webhooks",
@@ -45,7 +45,7 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.15.4",
-        "@simonbackx/simple-encoding": "2.21.0",
+        "@simonbackx/simple-encoding": "2.22.0",
         "@simonbackx/simple-errors": "^1.4.0",
         "@simonbackx/simple-networking": "1.18.1",
         "@simonbackx/vue-app-navigation": "2.8.2",
@@ -81,7 +81,7 @@
         "@testing-library/dom": "^10.4.0",
         "@types/eslint__js": "^8.42.3",
         "@types/file-saver": "^2.0.5",
-        "@types/jest": "^27.0.3",
+        "@types/jest": "^29.0.0",
         "@types/pdfkit": "0.13.4",
         "@types/qrcode": "1.5.3",
         "@vitejs/plugin-vue": "5.1.0",
@@ -92,7 +92,7 @@
         "jest": "29.7.0",
         "jest-cli": "^29.7.0",
         "jest-console-group-reporter": "^1.1.1",
-        "jest-extended": "^1.2.0",
+        "jest-extended": "4.0.2",
         "lerna": "^8.1.2",
         "maildev": "^2.1.0",
         "nodemon": "^3.1.0",
