Excluded root type definitions from i18n package

--- a/.development/i18n-uuid/tsconfig.json
+++ b/.development/i18n-uuid/tsconfig.json
@@ -24,9 +24,7 @@
     },
     "include": [
         "src/**/*.ts",
-        "index.ts",
-        "../../../*.d.ts",
-        "../../*.d.ts"
+        "index.ts"
     ],
     "exclude": [
         "node_modules",
