--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
         "prosemirror-model": "1.22.1",
         "vue": "3.5.12",
         "elliptic": "^6.5.4",
-        "sortablejs": "^1.15.0",
+        "sortablejs": "1.15.6",
         "nodemailer": "6.9.13",
         "yargs": "17.7.2",
         "sharp": "^0.32",
