--- a/.development/i18n-uuid/package.json
+++ b/.development/i18n-uuid/package.json
@@ -8,6 +8,7 @@
         "build": "tsc -b",
         "start": "yarn build && node --enable-source-maps ./dist/index.js start",
         "replace-text": "yarn build && node --enable-source-maps ./dist/index.js replace-text",
+        "clear-cache": "yarn build && node --enable-source-maps ./dist/index.js clear-cache",
         "replace-keys": "yarn build && node --enable-source-maps ./dist/index.js replace-keys",
         "auto-translate": "yarn build && node --enable-source-maps ./dist/index.js auto-translate",
         "create-comparison": "yarn build && node --enable-source-maps ./dist/index.js create-comparison",
