Added filter auto translations

--- a/.development/i18n-uuid/package.json
+++ b/.development/i18n-uuid/package.json
@@ -11,6 +11,7 @@
         "clear-cache": "yarn build && node --enable-source-maps ./dist/index.js clear-cache",
         "replace-keys": "yarn build && node --enable-source-maps ./dist/index.js replace-keys",
         "auto-translate": "yarn build && node --enable-source-maps ./dist/index.js auto-translate",
+        "filter-invalid-auto-translations": "yarn build && node --enable-source-maps ./dist/index.js filter-invalid-auto-translations",
         "create-comparison": "yarn build && node --enable-source-maps ./dist/index.js create-comparison",
         "test": "jest --runInBand",
         "test:build": "yarn -s build && yarn -s test",
