Added type checking to frontend tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "jsx": "preserve",
         "importHelpers": true,
         "moduleResolution": "node",
+        "noFallthroughCasesInSwitch": true,
         "experimentalDecorators": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
