--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "es2021",
         "useDefineForClassFields": false, /* this makes sue we can still use this in class property definitions */
         "module": "ESNext",
         "lib": [
-            "ES2020",
+            "es2021",
             "DOM",
             "DOM.Iterable"
         ],
