Started reimplementation of SQLFilters
Currently implemented in SQLModernFilter, but will get swapped in the future.

--- a/backend/shared/sql/package.json
+++ b/backend/shared/sql/package.json
@@ -10,7 +10,8 @@
         "dist"
     ],
     "scripts": {
-        "build": "tsc -b"
+        "build": "tsc -b",
+        "test": "jest"
     },
     "publishConfig": {
         "access": "public"
