--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -34,7 +34,7 @@
     "dependencies": {
         "@bwip-js/node": "^4.5.1",
         "@mollie/api-client": "3.7.0",
-        "@simonbackx/simple-database": "1.30.0",
+        "@simonbackx/simple-database": "1.32.0",
         "@simonbackx/simple-encoding": "2.22.0",
         "@simonbackx/simple-endpoints": "1.20.1",
         "@simonbackx/simple-logging": "^1.0.1",
@@ -56,7 +56,7 @@
         "luxon": "3.4.4",
         "mailparser": "3.7.0",
         "mockdate": "^3.0.2",
-        "mysql": "^2.18.1",
+        "mysql2": "^3.14.1",
         "node-rsa": "1.1.1",
         "openid-client": "^5.4.0",
         "postmark": "^4.0.5",
