--- a/backend/shared/models/package.json
+++ b/backend/shared/models/package.json
@@ -21,7 +21,7 @@
         "@stamhoofd/queues": "*"
     },
     "dependencies": {
-        "aws-sdk": "^2.885.0",
+        "@aws-sdk/client-s3": "3.823.0",
         "base-x": "^3.0.9"
     },
     "devDependencies": {
