Added support for wildcard filters in SQL filters

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "sourceMap": true,
         "strictNullChecks": true,
         "declarationMap": true,
+        "noErrorTruncation": true,
         "lib": [
             "esnext",
             "dom",
