--- a/shared/structures/tsconfig.json
+++ b/shared/structures/tsconfig.json
@@ -14,6 +14,7 @@
         "declarationMap": true,
         "outDir": "dist",
         "resolveJsonModule": true,
+        "noErrorTruncation": true,
         "lib": [
             "es2019",
             "dom"
