--- a/package.json
+++ b/package.json
@@ -1,131 +1,132 @@
 {
-    "name": "stamhoofd",
-    "version": "1.0.0",
-    "private": true,
-    "workspaces": {
-        "packages": [
-            "frontend/app/*",
-            "frontend/shared/*",
-            "backend/app/*",
-            "backend/shared/*",
-            "shared/*",
-            "*"
-        ],
-        "nohoist": [
-            "@simonbackx/simple-encoding"
-        ]
-    },
-    "license": "AGPL-3.0-only",
-    "scripts": {
-        "dev": "yarn clear && yarn clear-vite-cache && concurrently -r 'yarn -s build:shared:watch' 'wait-on shared/object-differ/dist/index.js && wait-on shared/object-differ/dist/index.d.ts && lerna run dev --stream --parallel'",
-        "dev:server": "concurrently -n ' ,Caddy,DNS,Mail,Stripe,Frontend Type Checking' -c ',red,red,red,red,blue' 'yarn -s dev' 'yarn -s caddy' 'yarn -s dns' 'yarn -s mail' 'yarn -s stripe-webhooks' 'wait-on shared/object-differ/dist/index.d.ts && yarn -s frontend:types --watch --preserveWatchOutput'",
-        "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
-        "test": "lerna run test -- --passWithNoTests",
-        "lint": "lerna run lint",
-        "vitest": "ENV_FILE=frontend/.env.json vitest",
-        "app:release": "cd devops && yarn -s build-code -s app && cd ../frontend/app/mobile && yarn ios && yarn android",
-        "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
-        "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
-        "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
-        "clear:global:shared": "rm -rf shared/*/dist shared/*/esm/dist",
-        "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/test-utils && yarn -s build && cd ../locales && yarn -s build && cd ../utility && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../object-differ && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
-        "clear:backend:shared": "rm -rf backend/shared/*/dist",
-        "build:backend:shared": "echo 'Building shared backend dependencies...' && cd backend/shared/queues && yarn -s build && cd ../env && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../crons && yarn -s build && cd ../middleware && yarn -s build  && cd ../.. && echo 'Done building backend shared dependencies.'",
-        "stripe-webhooks": "stripe listen --forward-to http://api.stamhoofd/stripe/webhooks",
-        "caddy": "caddy run -w --config .development/caddy.json",
-        "dns": "export SERVER_IP=127.0.0.1 && cd .development && source loadenv.sh && coredns",
-        "mail": "maildev --ip 0.0.0.0 --incoming-user username --incoming-pass password",
-        "frontend:types": "cd frontend/app/dashboard && yarn -s check-types",
-        "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
-        "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
-        "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
-        "ship": "node ./.development/increase-structures-version.js && yarn -s clear:shared && yarn -s build:shared && lerna version --exact --force-publish --yes --no-private && lerna publish from-git --yes --no-private --otp $(op item get NPM --otp || :)",
-        "ship:fix": "lerna publish from-git --yes --no-private --otp $(op item get NPM --otp || :)",
-        "translate:keys": "cd .development/i18n-uuid && yarn replace-keys",
-        "translate:auto-translate": "cd shared/locales && yarn -s build && cd ../.. && cd .development/i18n-uuid && yarn auto-translate",
-        "translate": "cd shared/locales && yarn -s build && cd ../.. && cd .development/i18n-uuid && yarn start"
-    },
-    "dependencies": {
-        "@babel/runtime": "^7.15.4",
-        "@simonbackx/simple-encoding": "2.22.0",
-        "@simonbackx/simple-errors": "^1.5.0",
-        "@simonbackx/simple-networking": "1.20.0",
-        "@simonbackx/vue-app-navigation": "2.10.0",
-        "@types/sortablejs": "^1.15.8",
-        "@zxcvbn-ts/core": "^0.3.0",
-        "@zxcvbn-ts/language-common": "^0.1.2",
-        "@zxcvbn-ts/language-nl-be": "^0.3.0",
-        "argon2": "^0.40.1",
-        "chart.js": "^3.9.1",
-        "core-js": "^3.20.1",
-        "file-saver": "^2.0.5",
-        "jose": "^5.9.6",
-        "jsvat-next": "3.0.2",
-        "jszip": "^3.7.1",
-        "libphonenumber-js": "^1.9.39",
-        "luxon": "3.4.4",
-        "path-browserify": "^1.0.1",
-        "pdfkit": "0.15.0",
-        "qrcode": "1.5.3",
-        "sharp": "^0.32",
-        "sortablejs-vue3": "^1.2.11",
-        "tslib": "^2.8.1",
-        "uuid": "11.0.3",
-        "vue": "3.5.12",
-        "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
-    },
-    "devDependencies": {
-        "@babel/cli": "^7.16.0",
-        "@babel/core": "^7.16.5",
-        "@babel/preset-env": "^7.16.5",
-        "@eslint/js": "^9.11.1",
-        "@stylistic/eslint-plugin": "^2.8.0",
-        "@testing-library/dom": "^10.4.0",
-        "@types/eslint__js": "^8.42.3",
-        "@types/file-saver": "^2.0.5",
-        "@types/jest": "^29.0.0",
-        "@types/pdfkit": "0.13.4",
-        "@types/qrcode": "1.5.3",
-        "@vitejs/plugin-vue": "5.1.0",
-        "@vitest/browser": "^3.0.8",
-        "autoprefixer": "^10.4.0",
-        "concurrently": "8.2.2",
-        "favicons": "^7.2.0",
-        "jest": "29.7.0",
-        "jest-cli": "^29.7.0",
-        "jest-console-group-reporter": "^1.1.1",
-        "jest-extended": "4.0.2",
-        "lerna": "^8.1.2",
-        "maildev": "^2.1.0",
-        "nodemon": "^3.1.0",
-        "playwright": "^1.51.0",
-        "postcss": "8.4.38",
-        "sass": "^1.45.1",
-        "ts-jest": "^29.1.2",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.6.2",
-        "vite": "5.3.5",
-        "vite-svg-2-webfont": "3.4.0",
-        "vitest": "^3.0.8",
-        "vitest-browser-vue": "^0.2.0",
-        "vue-tsc": "^2.0.14",
-        "wait-on": "^7.2.0"
-    },
-    "resolutions": {
-        "**/@mollie/api-client/axios": "^0.28.1",
-        "prosemirror-model": "1.22.1",
-        "vue": "3.5.12",
-        "elliptic": "^6.5.4",
-        "sortablejs": "1.15.6",
-        "nodemailer": "6.9.13",
-        "yargs": "17.7.2",
-        "sharp": "^0.32",
-        "tar": "6.2.1",
-        "postcss": "8.4.38",
-        "socket.io": "4.6.2",
-        "ws": "8.17.1",
-        "express": "4.20.0",
-        "@types/node": "^20.12",
-        "@types/jest": "^29.0.0"
-    }
+  "name": "stamhoofd",
+  "version": "1.0.0",
+  "private": true,
+  "workspaces": {
+    "packages": [
+      "frontend/app/*",
+      "frontend/shared/*",
+      "backend/app/*",
+      "backend/shared/*",
+      "shared/*",
+      "*"
+    ],
+    "nohoist": [
+      "@simonbackx/simple-encoding"
+    ]
+  },
+  "license": "AGPL-3.0-only",
+  "scripts": {
+    "dev": "concurrently -r 'yarn -s dev:init' 'yarn -s build:shared:watch' 'wait-on shared/object-differ/dist/index.js && wait-on shared/object-differ/dist/index.d.ts && lerna run dev --stream --parallel'",
+    "dev:stamhoofd": "STAMHOOFD_ENV=stamhoofd yarn -s dev",
+    "dev:keeo": "STAMHOOFD_ENV=keeo yarn -s dev",
+    "dev:ravot": "STAMHOOFD_ENV=ravot yarn -s dev",
+    "dev:init": "cd shared/build-development-env && yarn -s build && cd ../.. && node shared/build-development-env/dist/src/init.js",
+    "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
+    "test": "lerna run test -- --passWithNoTests",
+    "lint": "lerna run lint",
+    "vitest": "ENV_FILE=frontend/.env.json vitest",
+    "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
+    "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
+    "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
+    "clear:global:shared": "rm -rf shared/*/dist shared/*/esm/dist",
+    "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/test-utils && yarn -s build && cd ../build-development-env && yarn -s build && cd ../locales && yarn -s build && cd ../utility && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../object-differ && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
+    "clear:backend:shared": "rm -rf backend/shared/*/dist",
+    "build:backend:shared": "echo 'Building shared backend dependencies...' && cd backend/shared/queues && yarn -s build && cd ../env && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../crons && yarn -s build && cd ../middleware && yarn -s build  && cd ../.. && echo 'Done building backend shared dependencies.'",
+    "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
+    "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
+    "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
+    "ship": "node ./.development/increase-structures-version.js && yarn -s clear:shared && yarn -s build:shared && lerna version --exact --force-publish --yes --no-private && lerna publish from-git --yes --no-private --otp $(op item get NPM --otp || :)",
+    "ship:fix": "lerna publish from-git --yes --no-private --otp $(op item get NPM --otp || :)",
+    "translate:keys": "cd .development/i18n-uuid && yarn replace-keys",
+    "translate:auto-translate": "cd shared/locales && yarn -s build && cd ../.. && cd .development/i18n-uuid && yarn auto-translate",
+    "translate": "cd shared/locales && yarn -s build && cd ../.. && cd .development/i18n-uuid && yarn start",
+    "frontend:types": "cd frontend/app/dashboard && yarn -s check-types",
+    "prepare": "husky",
+    "dns": "export SERVER_IP=127.0.0.1 && cd .development && source loadenv.sh && coredns"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.15.4",
+    "@simonbackx/simple-encoding": "2.22.0",
+    "@simonbackx/simple-errors": "^1.5.0",
+    "@simonbackx/simple-networking": "1.20.0",
+    "@simonbackx/vue-app-navigation": "2.10.0",
+    "@types/sortablejs": "^1.15.8",
+    "@zxcvbn-ts/core": "^0.3.0",
+    "@zxcvbn-ts/language-common": "^0.1.2",
+    "@zxcvbn-ts/language-nl-be": "^0.3.0",
+    "argon2": "^0.40.1",
+    "chart.js": "^3.9.1",
+    "core-js": "^3.20.1",
+    "file-saver": "^2.0.5",
+    "jose": "^5.9.6",
+    "jsvat-next": "3.0.2",
+    "jszip": "^3.7.1",
+    "libphonenumber-js": "^1.9.39",
+    "luxon": "3.4.4",
+    "path-browserify": "^1.0.1",
+    "pdfkit": "0.15.0",
+    "qrcode": "1.5.3",
+    "sharp": "^0.32",
+    "sortablejs-vue3": "^1.2.11",
+    "tslib": "^2.8.1",
+    "uuid": "11.0.3",
+    "vue": "3.5.12",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@eslint/js": "^9.11.1",
+    "@stylistic/eslint-plugin": "^2.8.0",
+    "@testing-library/dom": "^10.4.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/file-saver": "^2.0.5",
+    "@types/jest": "^29.0.0",
+    "@types/pdfkit": "0.13.4",
+    "@types/qrcode": "1.5.3",
+    "@vitejs/plugin-vue": "5.1.0",
+    "@vitest/browser": "^3.0.8",
+    "autoprefixer": "^10.4.0",
+    "concurrently": "^9.2.0",
+    "favicons": "^7.2.0",
+    "husky": "^9.1.7",
+    "jest": "29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-console-group-reporter": "^1.1.1",
+    "jest-extended": "4.0.2",
+    "lerna": "^8.1.2",
+    "maildev": "^2.1.0",
+    "nodemon": "^3.1.0",
+    "playwright": "^1.51.0",
+    "postcss": "8.4.38",
+    "sass": "^1.45.1",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.6.2",
+    "vite": "5.3.5",
+    "vite-svg-2-webfont": "3.4.0",
+    "vitest": "^3.0.8",
+    "vitest-browser-vue": "^0.2.0",
+    "vue-tsc": "^2.0.14",
+    "wait-on": "^7.2.0"
+  },
+  "resolutions": {
+    "**/@mollie/api-client/axios": "^0.28.1",
+    "prosemirror-model": "1.22.1",
+    "vue": "3.5.12",
+    "elliptic": "^6.5.4",
+    "sortablejs": "1.15.6",
+    "nodemailer": "6.9.13",
+    "yargs": "17.7.2",
+    "sharp": "^0.32",
+    "tar": "6.2.1",
+    "postcss": "8.4.38",
+    "socket.io": "4.6.2",
+    "ws": "8.17.1",
+    "express": "4.20.0",
+    "@types/node": "^20.12",
+    "@types/jest": "^29.0.0"
+  }
 }
