Added watcher to environment variables

--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "license": "AGPL-3.0-only",
   "scripts": {
+    "dev:watch-env": "npx nodemon --quiet --watch shared/build-development-env --ignore './shared/build-development-env/dist/' --ignore './shared/build-development-env/esm/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s dev || exit 0'",
     "dev": "concurrently -r 'yarn -s dev:init' 'yarn -s build:shared:watch' 'wait-on shared/object-differ/dist/index.js && wait-on shared/object-differ/dist/index.d.ts && lerna run dev --stream --parallel'",
-    "dev:stamhoofd": "STAMHOOFD_ENV=stamhoofd yarn -s dev",
-    "dev:keeo": "STAMHOOFD_ENV=keeo yarn -s dev",
-    "dev:ravot": "STAMHOOFD_ENV=ravot yarn -s dev",
+    "dev:stamhoofd": "STAMHOOFD_ENV=stamhoofd yarn -s dev:watch-env",
+    "dev:keeo": "STAMHOOFD_ENV=keeo yarn -s dev:watch-env",
+    "dev:ravot": "STAMHOOFD_ENV=ravot yarn -s dev:watch-env",
     "dev:init": "cd shared/build-development-env && yarn -s build && cd ../.. && node shared/build-development-env/dist/src/init.js",
     "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
     "test": "lerna run test -- --passWithNoTests",
