Improved dev boot

--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -9,18 +9,17 @@
     },
     "license": "UNLICENCED",
     "scripts": {
-        "dev": "echo 'Waiting for shared backend packages...' && wait-on ../../shared/middleware/dist/index.js && echo 'Start building backend API' && concurrently -r 'yarn build --watch --preserveWatchOutput' \"yarn -s dev:watch\"",
+        "dev": "wait-on ../../shared/middleware/dist/index.js && concurrently -r 'yarn -s build --watch --preserveWatchOutput' \"yarn -s dev:watch\"",
         "dev:watch": "wait-on ./dist/index.js && nodemon --quiet --inspect=5858 --watch dist --watch '../../../shared/*/dist/' --watch '../../shared/*/dist/' --ext .ts,.json,.sql,.js --delay 2000ms --exec 'node --enable-source-maps ./dist/index.js' --signal SIGTERM",
-        "dev:backend": "yarn dev",
+        "dev:backend": "yarn -s dev",
         "build": "rm -rf ./dist/src/migrations && rm -rf ./dist/src/seeds && tsc -b",
-        "build:watch": "echo 'Waiting for shared backend packages...' && wait-on ../../shared/middleware/dist/index.js && echo 'Start building backend API' && yarn build --watch --preserveWatchOutput",
-        "build:full": "yarn clear && yarn build",
+        "build:full": "yarn -s clear && yarn -s build",
         "clear": "rm -rf ./dist",
-        "start": "yarn build && node --enable-source-maps ./dist/index.js",
+        "start": "yarn -s build && node --enable-source-maps ./dist/index.js",
         "test": "jest --runInBand",
         "test:build": "yarn -s build:full && yarn -s test",
-        "test:reset": "yarn build:full && jest --runInBand",
-        "migrations": "yarn build:full && node ./dist/migrations.js",
+        "test:reset": "yarn -s build:full && jest --runInBand",
+        "migrations": "yarn -s build:full && node ./dist/migrations.js",
         "lint": "eslint"
     },
     "devDependencies": {
