--- a/backend/app/renderer/package.json
+++ b/backend/app/renderer/package.json
@@ -9,11 +9,11 @@
     },
     "license": "UNLICENCED",
     "scripts": {
-        "dev": "echo 'Waiting for shared backend packages...' && wait-on ../../shared/middleware/dist/index.js && echo 'Start building backend renderer' && concurrently -r 'yarn build --watch --preserveWatchOutput' \"wait-on ./dist/index.js && nodemon --quiet --inspect=5858 --watch dist --watch '../../../shared/*/dist/' --watch '../../shared/*/dist/' --ext .ts,.json,.sql,.js --watch .env.json --delay 1000ms --exec 'node --enable-source-maps ./dist/index.js' --signal SIGTERM\"",
+        "dev": "wait-on ../../shared/middleware/dist/index.js && concurrently -r 'yarn -s build --watch --preserveWatchOutput' \"wait-on ./dist/index.js && nodemon --quiet --inspect=5858 --watch dist --watch '../../../shared/*/dist/' --watch '../../shared/*/dist/' --ext .ts,.json,.sql,.js --watch .env.json --delay 1000ms --exec 'node --enable-source-maps ./dist/index.js' --signal SIGTERM\"",
         "build": "tsc -b",
-        "build:full": "yarn clear && yarn build",
+        "build:full": "yarn -s clear && yarn -s build",
         "clear": "rm -rf ./dist",
-        "start": "yarn build && node --enable-source-maps ./dist/index.js",
+        "start": "yarn -s build && node --enable-source-maps ./dist/index.js",
         "lint": "eslint"
     },
     "devDependencies": {
