--- a/package.json
+++ b/package.json
@@ -17,23 +17,23 @@
   },
   "license": "AGPL-3.0-only",
   "scripts": {
-    "dev:watch-env": "npx nodemon --quiet --watch shared/build-development-env --ignore './shared/build-development-env/dist/' --ignore './shared/build-development-env/esm/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s dev || exit 0'",
+    "dev:watch-env": "npx nodemon --quiet --signal SIGTERM --watch shared/build-development-env --ignore './shared/build-development-env/dist/' --ignore './shared/build-development-env/esm/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s dev || exit 0'",
     "dev": "concurrently -r 'yarn -s dev:init' 'yarn -s build:shared:watch' 'wait-on shared/object-differ/dist/index.js && wait-on shared/object-differ/dist/index.d.ts && lerna run dev --stream --parallel'",
     "dev:stamhoofd": "STAMHOOFD_ENV=stamhoofd yarn -s dev:watch-env",
     "dev:keeo": "STAMHOOFD_ENV=keeo yarn -s dev:watch-env",
     "dev:ravot": "STAMHOOFD_ENV=ravot yarn -s dev:watch-env",
-    "dev:init": "cd shared/build-development-env && yarn -s build && cd ../.. && node shared/build-development-env/dist/src/init.js",
+    "dev:init": "wait-on shared/build-development-env/dist/src/init.js && node shared/build-development-env/dist/src/init.js",
     "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
     "test": "lerna run test -- --passWithNoTests",
     "lint": "lerna run lint",
     "vitest": "ENV_FILE=frontend/.env.json vitest",
     "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
     "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
-    "build:shared:watch": "npx nodemon --quiet --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
+    "build:shared:watch": "npx nodemon --quiet --signal SIGTERM --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
     "clear:global:shared": "rm -rf shared/*/dist shared/*/esm/dist",
-    "build:global:shared": "echo 'Building globally shared dependencies...' && cd shared/test-utils && yarn -s build && cd ../build-development-env && yarn -s build && cd ../locales && yarn -s build && cd ../utility && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../object-differ && yarn -s build && cd ../.. && echo 'Done building globally shared dependencies.'",
+    "build:global:shared": "echo '\\033[35m[BUILD]\\033[0m Building globally shared dependencies...' && cd shared/test-utils && yarn -s build && cd ../utility && yarn -s build && cd ../build-development-env && yarn -s build && cd ../locales && yarn -s build && cd ../excel-writer && yarn -s build && cd ../structures && yarn -s build && cd ../object-differ && yarn -s build && cd ../.. && echo '\\033[35m[BUILD]\\033[0m Done building globally shared dependencies.'",
     "clear:backend:shared": "rm -rf backend/shared/*/dist",
-    "build:backend:shared": "echo 'Building shared backend dependencies...' && cd backend/shared/queues && yarn -s build && cd ../env && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../crons && yarn -s build && cd ../middleware && yarn -s build  && cd ../.. && echo 'Done building backend shared dependencies.'",
+    "build:backend:shared": "echo '\\033[35m[BUILD]\\033[0m Building shared backend dependencies...' && cd backend/shared/queues && yarn -s build && cd ../env && yarn -s build && cd ../i18n && yarn -s build && cd ../email && yarn -s build && cd ../sql && yarn -s build && cd ../models && yarn -s build && cd ../logging && yarn -s build && cd ../crons && yarn -s build && cd ../middleware && yarn -s build  && cd ../.. && echo '\\033[35m[BUILD]\\033[0m Done building backend shared dependencies.'",
     "clear": "rm -rf shared/*/dist shared/*/esm/dist frontend/app/*/dist backend/shared/*/dist backend/app/*/dist",
     "clear-dependencies": "rm -rf node_modules */node_modules **/node_modules",
     "clear-vite-cache": "rm -rf frontend/app/*/node_modules/.vite",
