--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.6.2",
-    "vite": "5.3.5",
+    "vite": "^7.0.0",
     "vite-svg-2-webfont": "3.4.0",
     "vitest": "^3.0.8",
     "vitest-browser-vue": "^0.2.0",
