--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@types/pdfkit": "0.13.4",
     "@types/qrcode": "1.5.3",
     "@vitejs/plugin-vue": "5.1.0",
-    "@vitest/browser": "^3.0.8",
+    "@vitest/browser": "^3.2.4",
     "autoprefixer": "^10.4.0",
     "concurrently": "^9.2.0",
     "favicons": "^7.2.0",
@@ -107,9 +107,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.6.2",
     "vite": "^7.0.0",
-    "vite-svg-2-webfont": "3.4.0",
+    "vite-svg-2-webfont": "^4.0.0",
     "vitest": "^3.2.4",
-    "vitest-browser-vue": "^0.2.0",
+    "vitest-browser-vue": "^1.0.0",
     "vue-tsc": "^2.0.14",
     "wait-on": "^7.2.0"
   },
