--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "path-browserify": "^1.0.1",
     "pdfkit": "0.15.0",
     "qrcode": "1.5.3",
-    "sharp": "^0.32",
+    "sharp": "^0.34.2",
     "sortablejs-vue3": "^1.2.11",
     "tslib": "^2.8.1",
     "uuid": "11.0.3",
@@ -121,7 +121,7 @@
     "sortablejs": "1.15.6",
     "nodemailer": "6.9.13",
     "yargs": "17.7.2",
-    "sharp": "^0.32",
+    "sharp": "0.34.2",
     "tar": "6.2.1",
     "postcss": "8.4.38",
     "socket.io": "4.6.2",
