Updated axios and related blocking dependencies
Dropped postmark as no longer needed and still using older axios version

--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -53,7 +53,7 @@
         "@stamhoofd/structures": "2.85.4",
         "@stamhoofd/utility": "2.85.4",
         "archiver": "^7.0.1",
-        "axios": "1.6.8",
+        "axios": "^1.8.2",
         "cookie": "^0.5.0",
         "formidable": "3.5.4",
         "handlebars": "^4.7.7",
@@ -64,7 +64,6 @@
         "mysql2": "^3.14.1",
         "node-rsa": "1.1.1",
         "openid-client": "^5.4.0",
-        "postmark": "^4.0.5",
         "stripe": "^16.6.0"
     },
     "publishConfig": {
