--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "ws": "8.17.1",
     "express": "4.20.0",
     "@types/node": "^22",
-    "@types/jest": "^29.0.0"
+    "@types/jest": "^29.0.0",
+    "semver": "^7.7.2"
   }
 }
