--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "maildev": "^2.2.1",
     "nodemon": "^3.1.0",
     "playwright": "^1.51.0",
-    "postcss": "8.4.38",
     "sass": "^1.45.1",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.1",
@@ -119,7 +118,7 @@
     "yargs": "17.7.2",
     "sharp": "0.34.2",
     "tar": "6.2.1",
-    "postcss": "8.4.38",
+    "postcss": "^8.4.38",
     "ws": "8.17.1",
     "@types/node": "^22",
     "@types/jest": "^29.0.0",
