--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "luxon": "3.4.4",
     "path-browserify": "^1.0.1",
     "pdfkit": "0.15.0",
-    "qrcode": "1.5.3",
+    "qrcode": "^1.5.3",
     "sharp": "^0.34.2",
     "sortablejs-vue3": "^1.2.11",
     "tslib": "^2.8.1",
@@ -81,7 +81,7 @@
     "@types/jest": "^29.0.0",
     "@types/node": "^22",
     "@types/pdfkit": "0.13.4",
-    "@types/qrcode": "1.5.3",
+    "@types/qrcode": "^1.5.3",
     "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "5.1.0",
     "@vitest/browser": "^3.2.4",
