Added i18n ally to recommendations

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "dbaeumer.vscode-eslint",
         "vue.volar",
-        "editorconfig.editorconfig"
+        "editorconfig.editorconfig",
+        "lokalise.i18n-ally"
     ]
 }
