--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "migrate": "yarn -s build:shared && lerna run migrations --concurrency 1",
     "test": "lerna run test -- --passWithNoTests",
     "lint": "lerna run lint",
-    "vitest": "ENV_FILE=frontend/.env.json vitest",
+    "vitest": "NODE_ENV=test vitest",
     "clear:shared": "yarn -s clear:global:shared && yarn clear:backend:shared",
     "build:shared": "yarn -s build:global:shared && yarn -s build:backend:shared",
     "build:shared:watch": "npx nodemon --quiet --signal SIGTERM --watch shared --watch backend/shared --ignore './shared/*/dist/' --ignore './shared/*/esm/dist/' --ignore './backend/shared/*/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s build:shared || exit 0'",
