--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -217,7 +217,7 @@ jobs:
       - name: Running migrations
         run: cd backend/app/api && NODE_ENV=test node ./dist/migrations.js
       - name: Run boot test
-        run: bash test/boot/boot-test.sh
+        run: NODE_ENV=test bash test/boot/boot-test.sh
       - name: Notify Slack of failure
         uses: slackapi/slack-github-action@v2.0.0
         if: ${{ failure() }}
