--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,8 +159,10 @@ jobs:
         run: yarn install --prefer-offline --frozen-lockfile
       - name: Build shared packages
         run: yarn build:global:shared
+      - name: Linting
+        run: cd shared/structures && yarn lint --quiet
       - name: Run tests
-        run: cd shared/structures && yarn test --bail
+        run: yarn test --bail
       - name: Notify Slack of failure
         uses: slackapi/slack-github-action@v2.0.0
         if: ${{ failure() }}
