--- a/shared/eslint/package.json
+++ b/shared/eslint/package.json
@@ -17,6 +17,7 @@
         "eslint": "^9.11.1",
         "eslint-plugin-jest": "^28.8.3",
         "eslint-plugin-vue": "^9.28.0",
-        "typescript-eslint": "^8.7.0"
+        "typescript-eslint": "^8.7.0",
+        "eslint-plugin-import": "^2.32.0"
     }
 }
