--- a/shared/eslint/package.json
+++ b/shared/eslint/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eslint-plugin-stamhoofd",
-    "version": "2.89.0",
+    "version": "2.89.1",
     "main": "./src/index.js",
     "license": "UNLICENCED",
     "sideEffects": false,
@@ -15,9 +15,9 @@
         "@eslint/js": "^9.11.1",
         "@stylistic/eslint-plugin": "^2.8.0",
         "eslint": "^9.11.1",
+        "eslint-plugin-import": "^2.32.0",
         "eslint-plugin-jest": "^28.8.3",
         "eslint-plugin-vue": "^9.28.0",
-        "typescript-eslint": "^8.7.0",
-        "eslint-plugin-import": "^2.32.0"
+        "typescript-eslint": "^8.7.0"
     }
 }
