--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -13,7 +13,7 @@
         "dev:watch": "wait-on ./dist/index.js && nodemon --quiet --inspect=5858 --watch dist --watch '../../../shared/*/dist/' --watch '../../shared/*/dist/' --ext .ts,.json,.sql,.js --delay 2000ms --exec 'node --enable-source-maps ./dist/index.js' --signal SIGTERM",
         "dev:backend": "yarn -s dev",
         "build": "rm -rf ./dist/src/migrations && rm -rf ./dist/src/seeds && yarn -s copy-assets && tsc -b",
-        "copy-assets": "rsync --delete --exclude='*.ts' --exclude='*.js' -r --checksum ./src/ ./dist/src/",
+        "copy-assets": "rsync --delete --mkpath --exclude='*.ts' --exclude='*.js' -r --checksum ./src/ ./dist/src/",
         "build:full": "yarn -s clear && yarn -s build",
         "clear": "rm -rf ./dist",
         "start": "yarn -s build && node --enable-source-maps ./dist/index.js",
