--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "AGPL-3.0-only",
   "scripts": {
     "dev:watch-env": "npx nodemon --quiet --signal SIGTERM --watch shared/build-development-env --ignore './shared/build-development-env/dist/' --ignore './shared/build-development-env/esm/dist/' --ext .ts,.json,.sql,.mjs --exec 'yarn -s dev || exit 0'",
-    "dev": "concurrently -r 'yarn -s dev:init' 'yarn -s build:shared:watch' 'wait-on shared/object-differ/dist/index.js && wait-on shared/object-differ/dist/index.d.ts && lerna run dev --stream --parallel'",
+    "dev": "concurrently -r 'yarn -s dev:init' 'yarn -s build:shared:watch' 'wait-on shared/locales/esm/dist/index.d.ts && lerna run dev --stream --parallel'",
     "dev:stamhoofd": "STAMHOOFD_ENV=stamhoofd yarn -s dev:watch-env",
     "dev:keeo": "STAMHOOFD_ENV=keeo yarn -s dev:watch-env",
     "dev:ravot": "STAMHOOFD_ENV=ravot yarn -s dev:watch-env",
@@ -44,7 +44,7 @@
     "translate:keys": "cd .development/i18n-uuid && yarn replace-keys",
     "translate:auto-translate": "cd shared/locales && yarn -s build && cd ../.. && cd .development/i18n-uuid && yarn auto-translate",
     "translate": "cd shared/locales && yarn -s build && cd ../.. && cd .development/i18n-uuid && yarn start",
-    "frontend:types": "cd frontend/app/dashboard && yarn -s check-types",
+    "frontend:types": "wait-on shared/locales/esm/dist/index.d.ts && cd frontend/app/dashboard && yarn -s check-types",
     "prepare": "husky",
     "dns": "export SERVER_IP=127.0.0.1 && cd .development && source loadenv.sh && coredns"
   },
