--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
             backend:
               - 'shared/**'
               - 'backend/**'
+            frontend:
+              - 'shared/**'
+              - 'frontend/**'
             structures:
               - 'shared/**'
             models:
@@ -39,6 +42,7 @@ jobs:
       changed_backend: ${{ steps.changed.outputs.backend }}
       changed_structures: ${{ steps.changed.outputs.structures }}
       changed_models: ${{ steps.changed.outputs.models }}
+      changed_frontend: ${{ steps.changed.outputs.frontend }}
 
   job_test_backend:
     name: 'Backend API Tests'
@@ -242,3 +246,46 @@ jobs:
                   value: "click_me"
                   url: "${{ github.event.pull_request.url || github.event.head_commit.url }}"
                   action_id: "button-action"
+  
+  job_test_frontend_type_checking:
+    name: 'Frontend Types'
+    runs-on: ubuntu-latest
+    needs: [job_setup]
+    if: needs.job_setup.outputs.changed_frontend == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'yarn'
+
+      - name: Install dependencies
+        run: yarn install --prefer-offline --frozen-lockfile
+      - name: Build shared packages
+        run: yarn build:global:shared
+      - name: Run type checking
+        run: yarn -s frontend:types
+      - name: Notify Slack of failure
+        uses: slackapi/slack-github-action@v2.0.0
+        if: ${{ failure() }}
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: |
+            text: "Frontend type checking failed"
+            blocks:
+              - type: "section"
+                text:
+                  type: "mrkdwn"
+                  text: "@channel *Frontend type checking failed* for `${{ github.event.head_commit.message }}` by ${{ github.event.pull_request.user.name || github.event.head_commit.author.name }}"
+                accessory:
+                  type: "button"
+                  text:
+                    type: "plain_text"
+                    text: "Open commit"
+                    emoji: false
+                  value: "click_me"
+                  url: "${{ github.event.pull_request.url || github.event.head_commit.url }}"
+                  action_id: "button-action"
+  
