--- a/backend/app/api/package.json
+++ b/backend/app/api/package.json
@@ -43,6 +43,7 @@
         "node-rsa": "1.1.1",
         "openid-client": "^5.4.0",
         "postmark": "4.0.2",
-        "stripe": "^16.6.0"
+        "stripe": "^16.6.0",
+        "ibantools": "^3.1.0"
     }
 }
