--- a/shared/structures/package.json
+++ b/shared/structures/package.json
@@ -14,6 +14,7 @@
     "license": "UNLICENCED",
     "sideEffects": [
         "./src/circular-dependencies/*.ts",
+        "./index.ts",
         "./esm/dist/src/circular-dependencies/*.js",
         "./dist/src/circular-dependencies/*.js",
         "./esm/dist/index.js",
