Updated capacitor to v7

--- a/frontend/app/mobile/ios/App/App/capacitor.config.json
+++ b/frontend/app/mobile/ios/App/App/capacitor.config.json
@@ -23,6 +23,7 @@
 		"androidScheme": "https"
 	},
 	"packageClassList": [
+		"InAppReviewPlugin",
 		"AppPlugin",
 		"AppLauncherPlugin",
 		"FilesystemPlugin",
@@ -31,7 +32,6 @@
 		"PreferencesPlugin",
 		"SharePlugin",
 		"StatusBarPlugin",
-		"CapacitorUpdaterPlugin",
-		"CapacitorRateAppPlugin"
+		"CapacitorUpdaterPlugin"
 	]
 }
