--- a/frontend/app/mobile/android/app/capacitor.build.gradle
+++ b/frontend/app/mobile/android/app/capacitor.build.gradle
@@ -2,13 +2,14 @@
 
 android {
   compileOptions {
-      sourceCompatibility JavaVersion.VERSION_17
-      targetCompatibility JavaVersion.VERSION_17
+      sourceCompatibility JavaVersion.VERSION_21
+      targetCompatibility JavaVersion.VERSION_21
   }
 }
 
 apply from: "../capacitor-cordova-android-plugins/cordova.variables.gradle"
 dependencies {
+    implementation project(':capacitor-community-in-app-review')
     implementation project(':capacitor-app')
     implementation project(':capacitor-app-launcher')
     implementation project(':capacitor-filesystem')
@@ -18,7 +19,6 @@ dependencies {
     implementation project(':capacitor-share')
     implementation project(':capacitor-status-bar')
     implementation project(':capgo-capacitor-updater')
-    implementation project(':capacitor-rate-app')
 
 }
 
