--- a/frontend/app/mobile/android/capacitor.settings.gradle
+++ b/frontend/app/mobile/android/capacitor.settings.gradle
@@ -2,6 +2,9 @@
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../../../../node_modules/@capacitor/android/capacitor')
 
+include ':capacitor-community-in-app-review'
+project(':capacitor-community-in-app-review').projectDir = new File('../../../../node_modules/@capacitor-community/in-app-review/android')
+
 include ':capacitor-app'
 project(':capacitor-app').projectDir = new File('../../../../node_modules/@capacitor/app/android')
 
@@ -28,6 +31,3 @@ project(':capacitor-status-bar').projectDir = new File('../../../../node_modules
 
 include ':capgo-capacitor-updater'
 project(':capgo-capacitor-updater').projectDir = new File('../../../../node_modules/@capgo/capacitor-updater/android')
-
-include ':capacitor-rate-app'
-project(':capacitor-rate-app').projectDir = new File('../../../../node_modules/capacitor-rate-app/android')
